Get images form socket

--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -5,6 +5,7 @@
       <h2>Upload image</h2>
       <input type="file" (change)="onFileSelect($event)">
       <button type="button" (click)="onUpload()">Upload</button>
+      <button type="button" (click)="getImage()">GetImage</button>
     </div>
       <div class="example-container">
         <h2>Maps</h2>
