--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -16,15 +16,20 @@
     <input matInput [(ngModel)]="options.fixedRowHeight" type="number" placeholder="Fixed Row Height"
             (ngModelChange)="changedOptions()">
   </mat-form-field>
-  <button mat-mini-fab (click)="addItem()" class="add-button cols-2">
-    <mat-icon>add</mat-icon>
-  </button>
+  <button mat-raised-button color="primary" (click)="addItem()" class="add-button cols-2">Add grid item</button>
 </div>
 
 <gridster class="grid" [ngStyle]="{'background-image': backgroundURL, 'overflow': 'hidden'}" [options]="options">
-  <gridster-item class="grid-item" [item]="item" *ngFor="let item of battleGrid"
+  <gridster-item
+    (mouseover)="showItem=item.id"
+    (mouseout)="hideItem()"
+    class="grid-item" [item]="item"
+    *ngFor="let item of battleGrid"
     cdkDropList
     (cdkDropListDropped)="drop($event)"
     >
+    <div *ngIf="showItem == item.id">
+      <button mat-raised-button color="warn" (click)="deleteItem(item)" class="add-button cols-2">X</button>
+    </div>
   </gridster-item>
 </gridster>
